@@ -16,11 +16,11 @@
 
 package com.hedera.node.app.state.recordcache;
 
-import static com.hedera.node.app.spi.HapiUtils.TIMESTAMP_COMPARATOR;
-import static com.hedera.node.app.spi.HapiUtils.isBefore;
-import static com.hedera.node.app.spi.HapiUtils.minus;
+import static com.hedera.hapi.util.HapiUtils.TIMESTAMP_COMPARATOR;
+import static com.hedera.hapi.util.HapiUtils.isBefore;
+import static com.hedera.hapi.util.HapiUtils.minus;
 import static com.hedera.node.app.state.recordcache.RecordCacheService.NAME;
-import static com.hedera.node.app.state.recordcache.RecordCacheService.TXN_RECORD_QUEUE;
+import static com.hedera.node.app.state.recordcache.schemas.V0490RecordCacheSchema.TXN_RECORD_QUEUE;
 import static java.util.Collections.emptyList;
 import static java.util.Objects.requireNonNull;
 
@@ -30,9 +30,6 @@ import com.hedera.hapi.node.base.TransactionID;
 import com.hedera.hapi.node.state.recordcache.TransactionRecordEntry;
 import com.hedera.hapi.node.transaction.TransactionRecord;
 import com.hedera.node.app.spi.state.CommittableWritableStates;
-import com.hedera.node.app.spi.state.ReadableQueueState;
-import com.hedera.node.app.spi.state.WritableQueueState;
-import com.hedera.node.app.spi.state.WritableStates;
 import com.hedera.node.app.spi.validation.TruePredicate;
 import com.hedera.node.app.state.DeduplicationCache;
 import com.hedera.node.app.state.HederaRecordCache;
@@ -41,9 +38,13 @@ import com.hedera.node.app.state.WorkingStateAccessor;
 import com.hedera.node.config.ConfigProvider;
 import com.hedera.node.config.data.HederaConfig;
 import com.hedera.node.config.data.LedgerConfig;
+import com.swirlds.state.spi.ReadableQueueState;
+import com.swirlds.state.spi.WritableQueueState;
+import com.swirlds.state.spi.WritableStates;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.util.ArrayList;
+import java.util.ConcurrentModificationException;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -102,7 +103,8 @@ public class RecordCacheImpl implements HederaRecordCache {
      */
     private final DeduplicationCache deduplicationCache;
     /**
-     * A map of transaction IDs to the histories of all transactions that came to consensus with that ID, or their child
+     * A map of transaction IDs to the histories of all transactions that came to
+     * consensus with that ID, or their child
      * transactions. This data structure is rebuilt during reconnect or restart. Using a non-deterministic, map is
      * perfectly acceptable, as the order of these histories is not important.
      */
@@ -184,7 +186,7 @@ public class RecordCacheImpl implements HederaRecordCache {
         // to also remove from the queue any transactions that have expired.
         final WritableStates states = getWritableState();
         final WritableQueueState<TransactionRecordEntry> queue = states.getQueue(TXN_RECORD_QUEUE);
-        final SingleTransactionRecord firstRecord = transactionRecords.get(0);
+        final SingleTransactionRecord firstRecord = transactionRecords.getFirst();
         removeExpiredTransactions(queue, firstRecord.transactionRecord().consensusTimestampOrElse(Timestamp.DEFAULT));
 
         // For each transaction, in order, add to the queue and to the in-memory data structures.
@@ -224,20 +226,10 @@ public class RecordCacheImpl implements HederaRecordCache {
             final long nodeId,
             @NonNull final AccountID payerAccountId,
             @NonNull final TransactionRecord transactionRecord) {
-        // The transaction may be a preceding transaction, user transaction, or child transaction. The user transaction,
-        // alone, has a nonce of 0 in the transaction ID. Preceding transactions have no parent consensus timestamp,
-        // while child transactions have a parent consensus timestamp (the consensus timestamp of the user transaction).
-        //
-        // If the transaction is a user transaction or a preceding transaction, then it gets its own History. If the
-        // transaction is a child transaction, then it does not get its own preceding transaction, but instead is added
-        // to the History of the user transaction.
-        //
-        // And all transactions, regardless of the type, are added to the payer-reverse-index, so that queries of
-        // the payer account ID will return all transactions they paid for.
         final var txId = transactionRecord.transactionIDOrThrow();
-        // For the preceding child records parentConsensusTimestamp is not set, but the nonce will be greater than 1
-        // For the following child records parentConsensusTimestamp is also set. So to differentiate child records
-        // from user records, we check if the nonce is greater than 0.
+        // We need the hasParentConsensusTimestamp() check to detect triggered transactions that
+        // children of a ScheduleSign or ScheduleCreate (nonces were introduced after scheduled
+        // transactions, so these children still have nonce=0)
         final var isChildTx = transactionRecord.hasParentConsensusTimestamp() || txId.nonce() > 0;
         final var userTxId = isChildTx ? txId.copyBuilder().nonce(0).build() : txId;
 
@@ -247,7 +239,8 @@ public class RecordCacheImpl implements HederaRecordCache {
         // doesn't actually matter.
         final var history = histories.computeIfAbsent(userTxId, ignored -> new History());
         final var status = transactionRecord.receiptOrThrow().status();
-        if (!UNCLASSIFIABLE_STATUSES.contains(status)) {
+        // If the status indicates a due diligence failure, we don't use the result in duplicate classification
+        if (!DUE_DILIGENCE_FAILURES.contains(status)) {
             history.nodeIds().add(nodeId);
         }
 
@@ -332,14 +325,22 @@ public class RecordCacheImpl implements HederaRecordCache {
 
         // While we still need to gather more records, collect them from the different histories.
         final var records = new ArrayList<TransactionRecord>(maxRemaining);
-        for (final var transactionID : transactionIDs) {
-            final var history = histories.get(transactionID);
-            if (history != null) {
-                final var recs = history.orderedRecords();
-                records.addAll(recs.size() > maxRemaining ? recs.subList(0, maxRemaining) : recs);
-                maxRemaining -= recs.size();
-                if (maxRemaining <= 0) break;
+        // Because the set of transaction IDs could be concurrently modified by
+        // the handle thread, wrap this in a try-catch block to deal with a CME
+        // and return whatever we are able to gather. (I.e. this is a best-effort
+        // query, and not a critical path; unused in production environments)
+        try {
+            for (final var transactionID : transactionIDs) {
+                final var history = histories.get(transactionID);
+                if (history != null) {
+                    final var recs = history.orderedRecords();
+                    records.addAll(recs.size() > maxRemaining ? recs.subList(0, maxRemaining) : recs);
+                    maxRemaining -= recs.size();
+                    if (maxRemaining <= 0) break;
+                }
             }
+        } catch (ConcurrentModificationException ignore) {
+            // Ignore the exception and return what we found; this query is unused in production environments
         }
 
         records.sort((a, b) -> TIMESTAMP_COMPARATOR.compare(
